--- a/frontend/src/assets/_navbar.scss
+++ b/frontend/src/assets/_navbar.scss
@@ -1,63 +1,116 @@
 // DESKTOP START
-.navbar{
+.navbar {
   height: 55px;
   border-bottom: 2px solid #b0afafb3;
   z-index: 999;
   background-color: white;
-  .navbar-links{
+
+  .navbar-links {
     display: flex;
     justify-content: space-between;
     padding: 0 15px;
     padding-top: 9px;
   }
 }
-.navbar-group-left, .navbar-group-right{
+
+.navbar-group-left,
+.navbar-group-right {
   display: flex;
   gap: 15px
 }
-.navbar-logo, .navbar-parking, .navbar-search, .navbar-my-parking, .navbar-login{
+
+.navbar-logo,
+.navbar-parking,
+.navbar-search,
+.navbar-my-parking,
+.navbar-login {
   display: flex;
   justify-content: center;
   align-items: center;
-  svg{
+
+  svg {
     margin-right: 5px;
   }
-  a:hover{
+
+  a:hover {
     text-decoration: underline;
   }
 }
-.navbar-logo a:hover{
-  text-decoration: none;}
-.navbar-logo a{
+
+.navbar-logo a:hover {
+  text-decoration: none;
+}
+
+.navbar-logo a {
   font-size: larger;
 }
-.navbar-parking, .navbar-search, .navbar-my-parking, .navbar-login{
-  a, input{
+
+.navbar-parking,
+.navbar-search,
+.navbar-my-parking,
+.navbar-login {
+
+  a,
+  input {
     font-size: 0.8rem;
   }
 }
-.navbar-search{
+
+.navbar-search {
   border: 2px solid #b0afafb3;
   border-radius: 10px;
-  width: 20%;
+  width: 30%;
+  min-width: 175px;
   display: flex;
-  justify-content:left;
+  justify-content: left;
   padding: 3px 0;
   padding-left: 10px;
-  input{
+
+  input {
     background-color: transparent;
     border: none;
     height: 100%;
     width: 100%;
     margin-left: 8px;
   }
-  input:focus{
+
+  input:focus {
     outline: none;
   }
 }
+
 .sticky {
   position: fixed;
   top: 0;
   width: 100%;
 }
+
 // DESKTOP END
+@media screen and (max-width: 721px) {
+
+  .navbar-parking,
+  .navbar-group-right {
+    display: none;
+  }
+
+  .navbar {
+    .navbar-links {
+      display: flex;
+      justify-content: left;
+      gap: 10px;
+    }
+
+  }
+
+  .navbar-search {
+    min-width: none;
+    width: 60%;
+    input{
+      font-size: 12px;
+    }
+  }
+
+  .navbar-logo a {
+    font-size: 14px;
+  }
+}
