--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,6 +1,8 @@
 @import './assets/navbar';
 @import './assets/footer';
 @import './assets/mobileNav';
+@import './assets/home';
+@import './assets/details';
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
 
