--- a/frontend/src/assets/_home.scss
+++ b/frontend/src/assets/_home.scss
@@ -1,28 +1,73 @@
 .home-container{
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
+  max-width: 1150px;
 }
 .home-listing{
   display: flex;
   justify-content: center;
-  width: 20vw;
-  border: 2px solid #000000;
+  // width: 20vw;
+  width: 340px;
+  height: 110px;
+  border-radius: 10px;
+  margin: 5px;
+  background-color: #D9D9D9;
 }
 .listing-left{
-  width: 10vw;
+  // width: 12.5vw;
+  width: 64%;
+  position: relative;
+  text-align: center;
+  color: white;
+  font-size: 10px;
   img{
-    width: 50%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  .listing-left-bottomleft{
+    position: absolute;
+    bottom: 8px;
+    left: 16px;
+  
+  }
+  .listing-left-bottomright{
+    position: absolute;
+    bottom: 3px;
+    right: 16px;
+    p{
+      padding: 5px;
+      border-radius: 10px;
+    }
   }
 }
 .listing-right{
-  width: 10vw;
+  // width: 7.5vw;
+  width: 36%;
+  margin: 0 10px;
+  position: relative;
+  p{
+    font-size: 12px;
+    margin-top: 5px;
+  }
 }
 .listing-btn-container{
-  margin-top: 10%;
+  // margin-top: 10%;
+  position: absolute;
+    bottom: 8px;
+    left: 15%;
   a{
-    background-color: #4470B2;
+    font-size: 12px;
     color: white;
     border-radius: 10px;
-    padding: 10px;
+    padding: 5px 10px;
+    
+  }
+}
+
+@media screen and (max-width: 699px) {
+  .home-listing{
+    width: 100%;
   }
 }
