--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -4,6 +4,7 @@
 @import './assets/footer';
 @import './assets/mobileNav';
 @import './assets/desktopNav';
+@import './assets/login';
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
 
