--- a/frontend/src/assets/_footer.scss
+++ b/frontend/src/assets/_footer.scss
@@ -28,16 +28,19 @@
   svg {
     margin-right: 5px;
   }
-  a {
+
+  a,
+  div {
     font-size: 12px;
   }
+
   a:hover {
     text-decoration: underline;
   }
 }
 
 @media screen and (min-width: 722px) {
-  .footer{
+  .footer {
     display: none;
   }
 }
