--- a/frontend/src/assets/_navbar.scss
+++ b/frontend/src/assets/_navbar.scss
@@ -51,7 +51,8 @@
 .navbar-login {
 
   a,
-  input {
+  input,
+  div {
     font-size: 0.8rem;
   }
 }
@@ -105,7 +106,8 @@
   .navbar-search {
     min-width: none;
     width: 60%;
-    input{
+
+    input {
       font-size: 12px;
     }
   }
