Added checkout get and checkout post booking functionality

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -5,6 +5,7 @@
 @import './assets/mobileNav';
 @import './assets/desktopNav';
 @import './assets/login-register';
+@import './assets/checkout';
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
 
