--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -6,6 +6,7 @@
 @import './assets/desktopNav';
 @import './assets/login-register';
 @import './assets/checkout';
+@import './assets/payment';
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
 
