added removeBooking function to checkout page and fixed error handling in handleBooking function

--- a/frontend/src/assets/_checkout.scss
+++ b/frontend/src/assets/_checkout.scss
@@ -4,7 +4,11 @@
   align-items: center;
   padding-bottom: 10%;
 }
-
+.checkout-card-upper-upperright{
+  button{
+    color: #FF1313;
+  }
+}
 
 .checkout-card img{//provisorisk css
   height: 500px;
