error class styling

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -66,3 +66,10 @@ a {
 .mc-bcolor-tran{
   background-color: #e37575b2;
 }
+//error class
+.error{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 10%;
+}
