added searchbar functionality, needs styling and maybe validation

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,6 +1,7 @@
 @import './assets/home';
 @import './assets/details';
 @import './assets/navbar';
+@import './assets/searchbar';
 @import './assets/footer';
 @import './assets/mobileNav';
 @import './assets/desktopNav';
