--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -37,6 +37,7 @@ body {
   background-color: rgb(255, 255, 255);
   min-height: 100%;
   padding-top: 90px;
+  padding-bottom: 55px;
 }
 a {
   text-decoration: none;
