--- a/frontend/src/assets/_navbar.scss
+++ b/frontend/src/assets/_navbar.scss
@@ -31,8 +31,9 @@
     margin-right: 5px;
   }
 
-  a:hover {
+  a:hover, div:hover {
     text-decoration: underline;
+    cursor: pointer;
   }
 }
 
