styled detail page

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,4 +1,5 @@
 @import './assets/home';
+@import './assets/goBackBtn';
 @import './assets/details';
 @import './assets/navbar';
 @import './assets/searchbar';
