--- a/frontend/src/assets/_details.scss
+++ b/frontend/src/assets/_details.scss
@@ -11,13 +11,14 @@
   width: 80vw;
   height: 40vw;
   margin-top: 80px;
-  // background-color: purple; //provisorisk
+  max-width: 1100px;
+  max-height: 550px;
+
 }
 
 .details-left {
   width: 50%;
   height: 100%;
-  background-color: red; //provisorisk
   position: relative;
   color: white;
 
