--- a/frontend/src/assets/_details.scss
+++ b/frontend/src/assets/_details.scss
@@ -141,6 +141,10 @@
     border-radius: 10px;
     margin-top: 1%;
   }
+  button:hover{
+    text-decoration: underline;
+    cursor: pointer;
+  }
 }
 
 
