--- a/frontend/src/assets/_goBackBtn.scss
+++ b/frontend/src/assets/_goBackBtn.scss
@@ -10,6 +10,8 @@
     margin-left: 20px;
     display: flex;
     align-items: center;
+    max-width: 120px;
+    cursor: pointer;
     svg{
       font-size: 34px;
     }
