--- a/frontend/src/assets/_checkout.scss
+++ b/frontend/src/assets/_checkout.scss
@@ -1,10 +1,109 @@
-.checkout-card-upper-upperright{
-  button{
+.checkout-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 370px;
+  margin-top: 10vh;
+}
+.checkout-heading{
+  font-weight: 100;
+}
+.checkout-icons{
+  width: 100%;
+  color: #4470B2;
+  font-size: 24px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 13px;
+
+  hr{
+    min-width: 30%;
+    border-color: black;
+    
+  }
+  .checkout-icons-third{
+    color: #D9D9D9;
+  }
+}
+.checkout-card{
+  width: 100%;
+  background-color: #D9D9D9;
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+}
+.checkout-card-upper{
+  width: 100%;
+  height: 200px;
+  position: relative;
+  color: white;
+  font-size: 13px;
+  img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+  }
+  .checkout-card-upper-bottomleft{
+    position: absolute;
+    bottom: 15px;
+    left: 16px;
+  }
+  .checkout-card-upper-bottomright{
+    position: absolute;
+    bottom: 11.5px;
+    right: 16px;
+    p{
+      padding: 5px;
+      border-radius: 10px;
+    }
+  }
+  .checkout-card-upper-upperright{
+    position: absolute;
+    top: 16px;
+    right: 16px;
     color: #FF1313;
+    .checkout-upperright-fakebtn{
+      font-size: 20px;
+      cursor: pointer;
+    }
   }
 }
 
-.checkout-card img{//provisorisk css
-  height: 500px;
-  width: 500px;
+.checkout-card-lower{
+  font-size: 15px;
+  // font-weight: 600;
+  background-color: #D9D9D9;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 0;
+  gap: 20px;
+  p{
+    max-width: 60%;
+    padding: 0 10px;
+  }
+}
+.checkout-btn-container{
+  margin-top: 20px;
+  width: 95%;
+  button{
+    width: 100%;
+    font-size: 15px;
+    color: white;
+    background-color: #2E9438;
+    padding: 12px 0;
+    border-radius: 20px;
+    border: 0;
+    cursor: pointer;
+  }
+}
+
+@media screen and (max-width: 376px) {
+  .checkout-container{
+    margin-top: 40px;
+    padding: 0 10px;
+  }
 }
