finished payment styling and styled gobackbtn some more

--- a/frontend/src/assets/_goBackBtn.scss
+++ b/frontend/src/assets/_goBackBtn.scss
@@ -4,6 +4,8 @@
   position: fixed;
   top: 90px;
   width: 100%;
+  display: flex;
+    align-items: center;
   background-color: white;
 
   .go-back-btn-fake-btn{
