--- a/frontend/src/assets/_payment.scss
+++ b/frontend/src/assets/_payment.scss
@@ -19,13 +19,13 @@
     }
   }
 }
-.payment-topcover{
-  display: flex;
-  justify-content: space-between;
-  height: 40px;
-  z-index: 998;
-  position: fixed;
-  top: 50px;
-  width: 100%;
-  background-color: #8E8E8E;
-}
+// .payment-topcover{
+//   display: flex;
+//   justify-content: space-between;
+//   height: 40px;
+//   z-index: 590;
+//   position: fixed;
+//   top: 50px;
+//   width: 100%;
+//   background-color: #8E8E8E;
+// }
