--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -7,6 +7,7 @@
 @import './assets/mobileNav';
 @import './assets/desktopNav';
 @import './assets/login-register';
+@import './assets/bookings';
 @import './assets/checkout';
 @import './assets/payment';
 
