--- a/frontend/src/assets/_goBackBtn.scss
+++ b/frontend/src/assets/_goBackBtn.scss
@@ -2,11 +2,11 @@
   height: 40px;
   z-index: 900;
   position: fixed;
-  top: 90px;
+  top: 55px;
   width: 100%;
   display: flex;
     align-items: center;
-  background-color: white;
+  background-color: rgb(255, 255, 255);
 
   .go-back-btn-fake-btn{
     margin-left: 20px;
@@ -20,3 +20,8 @@
   }
 }
 //mobile
+@media screen and (max-width: 722px) {
+  .go-back-btn-container{
+    top: 90px;
+  }
+}
