cleaned up sass files

--- a/frontend/src/assets/_footer.scss
+++ b/frontend/src/assets/_footer.scss
@@ -34,7 +34,8 @@
     font-size: 12px;
   }
 
-  a:hover, div:hover {
+  a:hover,
+  div:hover {
     text-decoration: underline;
     cursor: pointer;
   }
