--- a/frontend/src/assets/_navbar.scss
+++ b/frontend/src/assets/_navbar.scss
@@ -31,7 +31,8 @@
     margin-right: 5px;
   }
 
-  a:hover, div:hover {
+  a:hover,
+  div:hover {
     text-decoration: underline;
     cursor: pointer;
   }
